feat(stores): Add configStore, previousCurveStore, previousPointStore, previousSvgCommandStore. feat(types): Add point type. feat(utils): Add smoothCubicBezierCurveTo. fix(app): Check config file before starting. fix(config): Add separator field for svg path that separated points with separator. fix(options): Add seperator field to options type. fix(convertSvgCommandToGcommand): If any separator supplied use this separator. fix(cubicBezierCurveTo): Add  updatePreviousCurveEndControl. fix(gcodeGenerator): Add calculation for smooth cubic bezier curve. fix(gcodeOperations): If x or y is NaN value, throw an error. fix(parseConfig): Add config file field checking.

--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,6 @@
   "initialCommand": ["G90 G21 (Positioning = absolute, Unit = mm)"],
   "lineNumbering": false,
   "sampleCount": 30,
+  "separator": null,
   "svgFileName": "image4.svg"
 }
