feat: Add curve helpers that includes usefull functions for curve smooth curve calculations. feat: Add quadraticBezierCurveTo and smoothQuadraticBezierCurveTo. fix(constants): Add all path commands. fix(configStore): Remove separator value. fix(options): Remove separator field. fix(convertSvgCommandToGcommand): Add number extractor function. fix(gcodeGenerator): Add quadratic bezier curve and smooth quadratic bezier curve functions. fix(gCodeOperations): Change error message. fix(parseConfig): move configStore inside processFileContents function.

--- a/src/config.json
+++ b/src/config.json
@@ -2,6 +2,5 @@
   "initialCommand": ["G90 G21 (Positioning = absolute, Unit = mm)"],
   "lineNumbering": false,
   "sampleCount": 30,
-  "separator": null,
-  "svgFileName": "image4.svg"
+  "svgFileName": "test0.svg"
 }
