feat: add filePropertiesStore, unit, conversion and scaleSvgSizeToTargetSize. fix(app): save svg file properties to store. fix(constants): create units, defaultUnit and unit conversion variables. fix(configStore): add unit,width and height fields. fix(options): add unit,width and height fields. fix(convertSvgCommandToGcommands): update points for target size with scaleSvgSizeToTargetSize function. fix(parseConfig): check unit, width and height fields.

--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,8 @@
   "initialCommand": ["G90 G21 (Positioning = absolute, Unit = mm)"],
   "lineNumbering": false,
   "sampleCount": 30,
-  "svgFileName": "test0.svg"
+  "svgFileName": "test15.svg",
+  "unit": "mm",
+  "width": 148,
+  "height": 210
 }
