--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.28",
     "@types/svg-parser": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
     "typescript": "^5.4.2"
   },
   "dependencies": {
