--- a/gcode.config.json
+++ b/gcode.config.json
@@ -2,9 +2,11 @@
   "initialCommand": ["G90 G21 (Positioning = absolute, Unit = mm)"],
   "lineNumbering": false,
   "sampleCount": 30,
-  "svgFileName": "test0.svg",
+  "svgFileName": "result.svg",
   "unit": "mm",
   "width": 148,
   "height": 210,
+  "centerX": 0,
+  "centerY": 0,
   "fill": false
 }
