--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svgtogcode",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "dist/src/app.js",
   "scripts": {
     "start": "tsc && node dist/src/app.js",
     "lint": "eslint . --ext .ts",
